<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".UserDetails"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="16dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/welcomeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/fontColorSecondary"
                android:textSize="18sp"
                app:fontFamily="@font/poppins_semi_bold" />

            <TextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/fontColorSecondary"
                android:textSize="18sp"
                app:fontFamily="@font/poppins_semi_bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/i_am"
                app:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/get_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints=""
                android:background="@drawable/textfields_circular"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_name_here"
                android:inputType="textPersonName"
                android:textColor="@color/fontColorPrimary"
                android:textSize="14sp"
                app:fontFamily="@font/poppins_regular"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/i_am"
                app:fontFamily="@font/poppins_regular" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:checked="false"
                    android:text="@string/male"
                    android:textColor="@color/fontColorPrimary"
                    app:fontFamily="@font/poppins_regular"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="@color/fontColorPrimary"
                    app:fontFamily="@font/poppins_regular"
                    tools:targetApi="lollipop" />

                <RadioButton
                    android:id="@+id/transgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:checked="false"
                    android:text="@string/transgender"
                    android:textColor="@color/fontColorPrimary"
                    app:fontFamily="@font/poppins_regular"
                    tools:targetApi="lollipop" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/born_on"
                app:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/textfields_circular"
                android:clickable="true"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="date"
                android:textSize="14sp"
                android:focusable="false"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/mobile_number"
                android:textColor="@color/fontColorSecondary"
                app:fontFamily="@font/poppins_regular" />

            <EditText
                android:id="@+id/mbno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/textfields_circular"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/this_number_will_be_used_for_communication"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/fontColorPrimary"
                android:textSize="14sp"
                app:fontFamily="@font/poppins_regular"
                tools:targetApi="o" />

            <Button
                android:id="@+id/complete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/buttonbg"
                android:drawableStart="@drawable/complete"
                android:paddingStart="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>