<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assistance">

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_if_9_3898370"
        android:drawableRight="@drawable/ic_if_9_3898370"
        android:text="@string/hold_tight_dispatch_is_on_the_way"
        android:textColor="@color/fontColorPrimary"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toTopOf="@+id/status2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_container" />

    <ImageView
        android:id="@+id/img_container"
        android:layout_width="0dp"
        android:layout_height="252dp"
        android:contentDescription="@string/display_assistance"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_medical"
        android:elevation="7dp"/>

    <TextView
        android:id="@+id/useradd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/vector_goto"
        android:drawableRight="@drawable/vector_goto"
        android:drawableTint="@color/fontColorSecondary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/government_college_of_engineering_kathora_naka_amravati_maharahtra"
        android:textAllCaps="false"
        android:textColor="@color/fontColorPrimary"
        android:textSize="14sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status2" />

    <TextView
        android:id="@+id/status2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:drawableStart="@drawable/location"
        android:drawableLeft="@drawable/location"
        android:drawableTint="@color/fontColorSecondary"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/detected_location"
        android:textAllCaps="true"
        android:textColor="@color/fontColorSecondary"
        android:textSize="12sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/status5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_supervisor_account_black_24dp"
        android:drawableLeft="@drawable/ic_supervisor_account_black_24dp"
        android:drawableTint="@color/fontColorSecondary"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/alert_send_to"
        android:textAllCaps="true"
        android:textColor="@color/fontColorSecondary"
        android:textSize="12sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useradd" />

    <TextView
        android:id="@+id/recieverAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/vector_goto"
        android:drawableRight="@drawable/vector_goto"
        android:drawableTint="@color/fontColorSecondary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/police_station_shegaon_naka_amravati_maharashtra_india"
        android:textAllCaps="false"
        android:textColor="@color/fontColorPrimary"
        android:textSize="14sp"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="7dp"
        app:layout_constraintTop_toBottomOf="@+id/status5" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_cancel_bg"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/fontColorPrimary"
        android:visibility="visible"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recieverAdd" />

    <Button
        android:id="@+id/outOfEmergency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_asst_medical"
        android:text="@string/out_of_emergency"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <TextView
        android:id="@+id/response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure_you_don_t_need_to_help"
        android:textColor="@color/fontColorPrimary"
        android:visibility="gone"
        app:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recieverAdd" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/btn_no"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/yesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/response" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_yes"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noBtn"
        app:layout_constraintTop_toBottomOf="@+id/response" />

</android.support.constraint.ConstraintLayout>